--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #111827;
+  background-color: #2196f3;
   color: rgba(255, 255, 255, 0.87);
 }
 
