--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #2196f3;
+  background-color: #048abf;
   color: rgba(255, 255, 255, 0.87);
 }
 
